Substitute <input> to <p> in the collapser, fix its responsiveness

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -537,6 +537,10 @@ footer {
         width: 90%;
         height: 90%;
     }
+
+    #collapser {
+        width: 90%;
+    }
 }
 
 
